# madnotes

./: Architecture.md  Cargo.toml  LICENSE  README.md  TODO.md  build-for-desktop.sh  build.sh  clean.sh  generate_static_html.sh  run-no-ports.sh  run.sh  serve.sh
.scripts/: deploy.sh
client/: .gitignore  Cargo.toml  fetch_override.js  index.html  invoke.js
client/src/: app.rs  lib.rs  menu.rs
client/src/app/: assets.rs  menu.rs  rendered_markdown.rs
client/src/app/rendered_markdown/: markdown_parser.rs  plugins.rs
client/src/app/rendered_markdown/plugins/: admonition.rs  fake_terminal.rs  rune_script.rs  svgbob_plugin.rs
snap/: snapcraft.yaml
src/: bin_generate_html.rs  bin_server.rs  main.rs  route.rs  serve_files.rs  server.rs
src/server/: page.rs
test_data/: svgbob.md
