[package]
name = "madnotes"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/bin_server.rs"


[dependencies]
web-view = { version = "0.7.3", optional = true, features=["edge"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.2"
#sauron = {version = "0.43.6"}
sauron = { path = "../sauron" }
css-colors = "1"
client = { version = "0.1.0", path = "./client/" }
native-dialog = { version = "0.5.5", optional = true }
hyper = { version = "0.14", features = ["full"] }
percent-encoding = "2"
serde_json = "1"
thiserror = "1"
futures = "0.3"
base64 = "0.13"


[features]
default = ["desktop-app"]
desktop-app = ["web-view", "native-dialog",  "fetch-override", "external-invoke"]
fetch-override = [] #override the fetch
open-ports = [] # use a built-in server to open ephemeral port to serve the files
external-invoke = [] # external invoke function
