[package]
name = "madnotes"
version = "0.1.0"
edition = "2018"
publish = false
description = "Create and share notes"
default-run = "madnotes"
readme = "./README.md"
license-file = "./LICENSE"

[[bin]]
name = "server"
path = "src/bin_server.rs"


[[bin]]
name = "generate_html"
path = "src/bin_generate_html.rs"


[dependencies]
web-view = { version = "0.7.3", optional = true, features=["edge"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.2"
#sauron = {version = "0.43.6"}
sauron = { path = "../sauron" }
css-colors = "1"
client = { version = "0.1.0", path = "./client/" }
native-dialog = { version = "0.5.5", optional = true }
hyper = { version = "0.14", features = ["full"] }
percent-encoding = "2"
serde_json = "1"
thiserror = "1"
futures = "0.3"
base64 = "0.13"

[features]
default = []
desktop-app = ["web-view", "native-dialog",  "fetch-override", "external-invoke"]
fetch-override = [] #override the fetch
open-ports = [] # use a built-in server to open ephemeral port to serve the files
external-invoke = [] # external invoke function


[patch.crates-io]
#mt-dom = { path = "../mt-dom" }


[package.metadata.deb]
maintainer = "Jovansonlee Cesar <ivanceras@gmail.com>"
copyright = "2021, Jovansonlee Cesar <ivanceras@gmail.com>"
license-file = ["LICENSE", "4"]
extended-description = "Svgbob is a diagramming mode which uses ascii art for rendering diagrams"
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/madnotes", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/madnotes/README", "644"],
    ["assets/madnotes.desktop", "usr/share/applications/", "644"],
    ["assets/madnotes.svg", "/usr/share/pixmaps/", "644"],
]

[package.metadata.bundle]
identifier = "com.ivanceras.Madnotes"
icon = ["assets/madnotes.svg"]

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
madnotes = { path = "/usr/bin/madnotes" }
